--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>React TypeScript Webpack Starter</title>
+        <title>Web3 Emoji Calendar App</title>
     </head>
     <body>
         <div id="root"></div>
